0.2.45

* Fix some pip install issues 

0.2.44 2017-07-11

* Hotfix: PYTHONPATH set for `task run`

0.2.43 2017-07-11

* Support for experimental feature - now you can set python version in sparrow.json to make `plg install` command use proper pip (pip or pip3) when install dependencies

0.2.42 2017-07-11

* Support for experimental feature - pass command line arguments in free style by ` -- args args args ` in `plg run` and `task run` commands

0.2.41 2017-07-10

* Requires Outthentic, version 0.3.0


0.2.40 2017-07-07

* `sparrow plg install`  - Install pythin scripts into local/bin

0.2.39 2017-06-29

* Support for --cwd `parameter` for `strun`
* fix for #17

0.2.38 2017-06-23

* Support for custom repositories
* Fix - #16 . Now sparrow correctly parses run time parameter when `plg run` or `task run`

0.2.37 2017-05-15

* Documentation fix for #15
* Support for pip/requirements.txt install from #12

0.2.36 2017-04-18

* Requires latest version of Outthentic

0.2.35 2017-04-17

* Requires latest version of Outthentic

0.2.34 2017-04-11

* Requires latest version of Outthentic

0.2.33 2017-04-10

* Modified changes log ( occasionally missed at previos version )

0.2.32 2017-04-10

* run tasks and plugins - change titles in reports 

* automatic guessing of configuration format support

* task box run - transparently passes all plugin related options

* Add `help`, `info` aliases for `plg man` command

0.2.31 2017-03-29

* Requires latest version of Outthentic

0.2.30 2017-03-18

* bring in versions at Changes file

0.2.29 2017-03-18

* init_sparrow_env - do not remove sparrow cache ( need to fix https://github.com/melezhik/sparrowdo/issues/4 )

0.2.28 2017-03-02

* Requires latest version of Outthentic

0.2.27 2017-03-02

* Requires latest version of Outthentic

0.2.26 2017-02-17  

* Reports - changed markers for plugins and tasks 
* Requires latest version of Outthentic - to add timestamps to sparrow reports (#9)

0.2.25 2017-01-11
